--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="https://subcontracteu.com/uploads/pages/535eee07e8fd4c9fabc377cd464c1d74.png">
     <link rel="stylesheet" href="style.css" />
     <!-- =====BOX ICONS===== -->
     <link
@@ -13,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-<meta property="og:image" content="Assets/about.jpg">
+   
     <title>Alex Agrafiotis</title>
   </head>
   <body>
