--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image:secure_url" content="https://subcontracteu.com/uploads/pages/535eee07e8fd4c9fabc377cd464c1d74.png">
+    <meta property="og:image:secure" content="https://subcontracteu.com/uploads/pages/535eee07e8fd4c9fabc377cd464c1d74.png">
     <link rel="stylesheet" href="style.css" />
     <!-- =====BOX ICONS===== -->
     <link
