--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="https://subcontracteu.com/uploads/pages/535eee07e8fd4c9fabc377cd464c1d74.png">
+   
     <link rel="stylesheet" href="style.css" />
     <!-- =====BOX ICONS===== -->
     <link
@@ -15,7 +15,26 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
    
-    <title>Alex Agrafiotis</title>
+    <!-- Primary Meta Tags -->
+<title>Alex Agrafiotis</title>
+<meta name="title" content="Alex Agrafiotis" />
+<meta name="description" content="" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ale-gra.gr/" />
+<meta property="og:title" content="Alex Agrafiotis" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://ale-gra.gr/" />
+<meta property="twitter:title" content="Alex Agrafiotis" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <!--===== HEADER =====-->
