--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <meta property="og:url" content="https://ale-gra.gr/" />
 <meta property="og:title" content="Alex Agrafiotis" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="Assets/social.jpeg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://ale-gra.gr/" />
 <meta property="twitter:title" content="Alex Agrafiotis" />
 <meta property="twitter:description" content="" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="Assets/social.jpeg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
   </head>
